fix: nav bar on mobile

--- a/src/components/Links/Links.module.scss
+++ b/src/components/Links/Links.module.scss
@@ -55,3 +55,7 @@
     color: var(--color-b);
     transition: 0.2s ease-in-out;
 }
+
+.linksAndLights {
+    display: flex;
+}
